<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView 
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:contentDescription="@string/content_description_logo"/>
    
    <TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp"
        android:textSize="20sp"
	    android:text="@string/app_name"/>
    
    <TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
        android:gravity="center"
        android:textSize="18sp"
	    android:text="@string/app_version"/>
    
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    android:layout_marginBottom="10dp"
	    android:gravity="center"
	    android:text="@string/copyright"/>
	
</LinearLayout>
